--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,6 @@
 /* Cards */
 
 .grid-us {
-    margin-bottom: 3rem;
     display: grid;
     gap: 2rem;
 }
@@ -56,6 +55,13 @@
 
 @media (min-width: 768px) {
     .grid-fqa{
-        grid-template-columns: repeat(1fr, 2fr);
+        grid-template-columns: 1fr 2fr;
     }
+}
+
+.image-fqa{
+    height: 30rem;
+    background-image: url(https://pixabay.com/get/g3cd3309953a4f60529407b0ddc287fefcd4b470beb43d71701a84abc087ce15b13ec4fa7c24c96d64f30aa993c4206ae_1280.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
 }
