--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,7 +1,7 @@
 // COLOR THEME
 $primary-color: rgb(0, 123, 255);  // CALM BLUE
 $secondary-color: #28a745;  // LIGHT GREEN
-$tertiary-color: #6c757d;  // MEDIUM GRAY
+$tertiary-color: rgb(108, 117, 125);  // MEDIUM GRAY
 $accent-color: #f8c146;  // SOFT ORANGE
 
 $white: #ffffff;  // WHITE
