--- a/scss/sections/_hours.scss
+++ b/scss/sections/_hours.scss
@@ -2,73 +2,28 @@
 @use '../base/mixins' as m;
 
 
-// .section-container {
-//   position: relative;
-// }
-
 .hours {
+  position: relative;
+  height: 80vh;
+  background-image: url('../img/test.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+}
 
-  .hour-grid {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    // gap: 1rem; 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    @include m.breakpoint-up(lg) {
-      grid-template-rows: unset;
-      grid-template-columns: 1fr 2fr;
-    }
-
-  }
-
-
-  // .column-image {
-  //   position: relative;
-  // }
-
-  .image-background {
-    background-image: url('../img/test.jpg');
-    height: 25rem;
-    background-size: cover;
-    background-position: center;
-
-    @include m.breakpoint-up(sm) {
-      height: 20rem;
-    }
-
-    // @include m.breakpoint-up(md) {
-    //   height: 23rem;
-    // }
-
-    @include m.breakpoint-up(lg) {
-      height: 40rem;
-    }
-  }
-
-
-
-  .card {
-    border: none;
-    width: 90%;
-    height: auto;
-
-    @include m.breakpoint-up(lg) {
-      width: 70%;
-      height: auto;
-    }
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    // @include m.breakpoint-up(sm) {
-    //   top: 55%;
-    // }
-
-    // @include m.breakpoint-up(lg) {
-    //   top: 55%;
-    //   left: 45%;
-    // }
-  }
-
+.content {
+  text-align: center;
+  color: white;
 }
