--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -6,15 +6,24 @@
     display: grid;
     gap: 2rem;
 
+    @include m.breakpoint-up(md) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     @include m.breakpoint-up(lg) {
         grid-template-columns: repeat(4, 1fr);
-        gap: 1;
+        gap: 1rem;
+    }
+
+    @include m.breakpoint-up(lg) {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1.5rem;
     }
 }
 
 .service-card {
     position: relative;
-    min-height: 200px;
+    min-height: 300px;
     background-size: cover;
     background-position: center;
     overflow: hidden;
@@ -43,7 +52,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 123, 255, .8);
+    background-color: rgba(108, 117, 125, .8);
     display: flex;
     flex-direction: column;
     justify-content: center;
