--- a/scss/sections/_fqa.scss
+++ b/scss/sections/_fqa.scss
@@ -34,7 +34,7 @@
 
   .btn-custom{
     color: v.$white;
-    background-color: v.$primary-color;
+    background-color: v.$secondary-color;
 
     &:hover{
       background-color: v.$red;
