--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -31,19 +31,19 @@
 }
 
 .service1 {
-    background-image: url('../img/test.jpg');
+    background-image: url('../img/service1.jpg');
 }
 
 .service2 {
-    background-image: url('../img/test.jpg');
+    background-image: url('../img/service2.jpg');
 }
 
 .service3 {
-    background-image: url('../img/test.jpg');
+    background-image: url('../img/service3.jpg');
 }
 
 .service4 {
-    background-image: url('../img/test.jpg');
+    background-image: url('../img/service4.jpg');
 }
 
 .service-overlay {
