--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -6,6 +6,7 @@
     // background: linear-gradient(to right, #6c757d, #6c757d); 
 
     .about-grid {
+        overflow: hidden;
 
         display: grid;
         grid-template-rows: repeat(2, 1fr);
@@ -16,11 +17,46 @@
             grid-template-columns: repeat(2, 1fr);
         }
 
+        .about-title {
+            display: inline-block; 
+            border-bottom: 2px solid v.$red; 
+            width: 100%;
+            padding-bottom: 0.5rem; 
+        }
+
+
         .about-img {
-            background-image: url(../img/test.jpg);
+            background-image: url(../img/about.png);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+        }
+
+        .about-text {
+            position: relative;
+            
+            // padding: 2rem;
+
+            // USING A PSEUDO-ELEMENT TO ROTATE THE BACKGROUND IMAGE
+            &::before {
+                content: '';
+                position: absolute;
+                top: 90%;
+                left: 90%;
+                width: 500px; // ADJUST SIZE
+                height: 500px; // ADJUST SIZE
+                background-image: url('../img/icon health.png'); // ICON IMAGE
+                background-size: contain;
+                background-repeat: no-repeat;
+                opacity: 0.1; // MAKE IT SUBTLE
+                transform: translate(-50%, -50%) rotate(15deg); // ROTATE 35 DEGREES
+                z-index: 1; // PLACE BELOW THE TEXT
+            }
+
+            p {
+                position: relative;
+                z-index: 2; // ENSURE TEXT IS ON TOP
+            }
         }
 
         .about-content {
