--- a/scss/sections/_gallery.scss
+++ b/scss/sections/_gallery.scss
@@ -9,17 +9,26 @@
     .gallery-grid {
         display: grid;
         // grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1.5rem;
+        gap: 1rem;
+
+        @include m.breakpoint-up(lg){
+            grid-template-columns: repeat(3, 1fr);
+        }
     }
 
     .gallery-item {
         overflow: hidden;
-        border-radius: 0.5rem;
+        border-radius: 1rem;
+
+        h5{
+            margin: 0;
+        }
 
         img {
             width: 100%;
             height: 100%;
+            // max-height: 15rem;
+            object-fit: cover;
             transition: transform 0.3s ease; // SMOOTH ZOOM EFFECT ON HOVER
         }
 
@@ -27,30 +36,82 @@
             transform: scale(1.1); // ZOOM IN ON HOVER
         }
 
-        &:nth-child(1) {
-            grid-column: 1 / 2;
-            grid-row: 1 / 3;
+
+        @include m.breakpoint-up(md){
+            &:nth-child(1) {
+                grid-column: 1 / 3;
+            }
+    
+            &:nth-child(2) {
+                grid-column: 3 / 4;
+            }
+    
+            &:nth-child(3) {
+                grid-column: 1 / 2;
+            }
+
+            &:nth-child(4) {
+                grid-column: 2 / 3;
+            }
+
+            &:nth-child(5) {
+                grid-column: 3 / 4;
+                grid-row: 2 / 5;
+            }
+
+            &:nth-child(6) {
+                grid-column: 1 / 2;
+                grid-row: 3 / 5;
+            }
+
+            &:nth-child(7) {
+                grid-column: 2 / 3;
+                grid-row: 3 / 4;
+            }
+
+            &:nth-child(8) {
+                grid-column: 2 / 3;
+                grid-row: 4 / 5;
+            }
         }
 
-        &:nth-child(2) {
-            grid-column: 2 / 4;
-            grid-row: 1 / 2;
-        }
 
-        &:nth-child(3) {
-            grid-column: 2 / 3;
-        }
+        // @include m.breakpoint-up(lg){
+        //     &:nth-child(1) {
+        //         grid-column: 1 / 3;
+        //     }
+    
+        //     &:nth-child(2) {
+        //         grid-column: 3 / 4;
+        //     }
+    
+        //     &:nth-child(3) {
+        //         grid-column: 1 / 2;
+        //     }
 
-        // &:nth-child(4) {
-        //     grid-column: 2 / 3;
-        // }
+        //     &:nth-child(4) {
+        //         grid-column: 2 / 3;
+        //     }
 
-        // &:nth-child(5) {
-        //     grid-row: 3 / 4;
-        // }
+        //     &:nth-child(5) {
+        //         grid-column: 3 / 4;
+        //         grid-row: 2 / 5;
+        //     }
 
-        // &:nth-child(6) {
-        //     grid-row: 1 / 3;
+        //     &:nth-child(6) {
+        //         grid-column: 1 / 2;
+        //         grid-row: 3 / 5;
+        //     }
+
+        //     &:nth-child(7) {
+        //         grid-column: 2 / 3;
+        //         grid-row: 3 / 4;
+        //     }
+
+        //     &:nth-child(8) {
+        //         grid-column: 2 / 3;
+        //         grid-row: 4 / 5;
+        //     }
         // }
     }
 }
