--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -2,9 +2,9 @@
 @use '../base/mixins' as m;
 
 
-#hero {
+.hero-section {
     position: relative;
-    background: url('../img/test.jpg') no-repeat center center/cover; // ADD BACKGROUND IMAGE
+    background: url('../img/test.jpg') no-repeat center center/cover;
     height: 100vh;
 
     .overlay {
@@ -13,25 +13,24 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); // SEMI-TRANSPARENT BLACK OVERLAY
+        background-color: rgba(0, 0, 0, 0.5);
         z-index: 1;
     }
 
     .container {
         position: relative;
-        z-index: 2; // ENSURE CONTENT IS ABOVE THE OVERLAY
+        z-index: 2; 
     }
 
     .hero-title {
-        font-size: 3rem; // RESPONSIVE FONT SIZE
-        font-weight: 700; // USE A VARIABLE FOR FONT WEIGHT
+        font-weight: 700;
     }
 
     .hero-description {
-        font-size: 1.25rem; // RESPONSIVE DESCRIPTION FONT SIZE
+        font-size: 1.25rem;
     }
 
     .btn {
-        padding: 0.75rem 1.5rem; // STYLING FOR CALL-TO-ACTION BUTTON
+        padding: 0.75rem 1.5rem;
     }
 }
