--- a/scss/sections/_hours.scss
+++ b/scss/sections/_hours.scss
@@ -5,7 +5,7 @@
 .hours {
   position: relative;
   height: 80vh;
-  background-image: url('../img/test.jpg');
+  background-image: url('../img/ambulance.jpg');
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
