--- a/scss/sections/_why-us.scss
+++ b/scss/sections/_why-us.scss
@@ -7,7 +7,13 @@
     gap: 2rem;
 
     @include m.breakpoint-up(md) {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include m.breakpoint-up(lg) {
+        grid-template-rows: unset;
+        grid-template-columns: repeat(4, 1fr);
         gap: 1.5rem;
     }
 
@@ -19,7 +25,7 @@
         }
 
         &:hover {
-            background: lighten(v.$secondary-color, 10%);
+            background: lighten(v.$primary-color, 10%);
             color: v.$white;
             transition: all .3s ease-out;
         }
