--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -10,34 +10,31 @@
 
         display: grid;
         grid-template-rows: repeat(2, 1fr);
-        gap: 2rem;
 
-        @include m.breakpoint-up(lg) {
+        @include m.breakpoint-up(md) {
             grid-template-rows: unset;
             grid-template-columns: repeat(2, 1fr);
+            gap: 2rem;
         }
 
         .about-title {
-            display: inline-block; 
-            border-bottom: 2px solid v.$red; 
+            display: inline-block;
+            border-bottom: 2px solid v.$red;
             width: 100%;
-            padding-bottom: 0.5rem; 
+            padding-bottom: 0.5rem;
         }
 
 
         .about-img {
             background-image: url(../img/about.png);
             background-size: cover;
-            background-position: center;
+            background-position: center top;
             background-repeat: no-repeat;
         }
 
         .about-text {
             position: relative;
-            
-            // padding: 2rem;
 
-            // USING A PSEUDO-ELEMENT TO ROTATE THE BACKGROUND IMAGE
             &::before {
                 content: '';
                 position: absolute;
@@ -55,7 +52,7 @@
 
             p {
                 position: relative;
-                z-index: 2; // ENSURE TEXT IS ON TOP
+                z-index: 2;
             }
         }
 
@@ -64,7 +61,7 @@
             padding: 1rem;
 
             @include m.breakpoint-up(md) {
-                max-width: 720px;
+                max-width: 345px;
             }
 
             @include m.breakpoint-up(lg) {
