--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -4,6 +4,7 @@
 @forward 'services';
 @forward 'fqa';
 @forward 'testimonial';
+@forward 'blog';
 @forward 'hours';
 @forward 'gallery';
 @forward 'contact';
