--- a/scss/sections/_blog.scss
+++ b/scss/sections/_blog.scss
@@ -19,13 +19,29 @@
             grid-template-columns: repeat(3, 1fr);
         }
 
+        @include m.breakpoint-up(xl) {
+            gap: 2rem;
+        }
+
         .card {
             border: none;
 
             img {
-                height: 250px;
+                height: 300px;
                 object-fit: cover;
                 width: 100%;
+
+                @include m.breakpoint-up(md) {
+                    height: 200px;
+                }
+
+                @include m.breakpoint-up(lg) {
+                    height: 230px;
+                }
+
+                @include m.breakpoint-up(xl) {
+                    height: 250px;
+                }
             }
         }
 
